--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,7 +92,12 @@
     <string name="permission_denied_toast">You should give permission to the app</string>
     <string name="turn_on_location_toast">Turn on location</string>
     <string name="air_quality">جودة الهواء</string>
-    <string name="air_quality_good">مقبول</string>
+    <string name="air_quality_good">Good</string>
+    <string name="air_quality_moderate">Moderate</string>
+    <string name="air_quality_unhealthy_for_sensitive_groups">Unhealthy for Sensitive Groups</string>
+    <string name="air_quality_unhealthy">Unhealthy</string>
+    <string name="air_quality_very_unhealthy">Very Unhealthy </string>
+    <string name="air_quality_Hazardous">Hazardous</string>
     <string name="wind">الرياح</string>
     <string name="gusts_of_wind">هبات الرياح</string>
     <string name="air_information_button">معلومات عن الجو اليوم</string>
